--- a/style.html
+++ b/style.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CSS border, margin and padding style">
     <meta name="author" content="Nwagbogun Sonia">
-    <title>Css style</title>
+    <title>Flexbox Css style</title>
     <style>
         header {
             height: 100px;
